svn/robobot/mqtt_python/log_err.txt
  File "/home/local/svn/robobot/mqtt_python/mqtt-client.py", line 257
    servo.servo_down_position():
                               ^
SyntaxError: invalid syntax
  File "/home/local/svn/robobot/mqtt_python/mqtt-client.py", line 257
    servo.servo_down_position():
                               ^
SyntaxError: invalid syntax
